--- a/slides/templates/slides/base.html
+++ b/slides/templates/slides/base.html
@@ -3,7 +3,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  {% block meta %}
   <meta charset="UTF-8">
+  {% endblock %}
+
   <title>{% block title %}{% endblock %}</title>
 
   {% block styles %}
